--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,7 +29,10 @@
     </noscript>
     <div id="root"></div>
     <!--
-      This HTML file is a template.
+      Thshadow: 2px 2px 0 blueviolet,
+		-2px -2px 0 blueviolet,
+		-2px 2px 0 blueviolet,
+		2px -2px 0 blueviolet;is HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
       You can add webfonts, meta tags, or analytics to this file.
